--- a/LockerKiosk/my-app/package.json
+++ b/LockerKiosk/my-app/package.json
@@ -14,7 +14,8 @@
     "@tailwindcss/vite": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-full-screen": "^1.1.1"
+    "react-full-screen": "^1.1.1",
+    "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
