--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
+  "name": "temporary",
+  "version": "1.0.0",
+  "description": "temporary folder for learning",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [
+    "test"
+  ],
+  "author": "saatwik",
+  "license": "ISC",
   "dependencies": {
+    "cowsay": "^1.6.0",
+    "nodemon": "^3.1.10",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.18.2"
   }
 }
+
