Day - 41  29/9/25 - Tailwind CSS

--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "author": "saatwik",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "cowsay": "^1.6.0",
-    "nodemon": "^3.1.10",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongodb": "^6.20.0",
-    "mongoose": "^8.18.2"
+    "mongoose": "^8.18.2",
+    "nodemon": "^3.1.10",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "@tailwindcss/cli": "^4.1.13"
   }
 }
-
